[package]
name = "yellowstone-vixen-janus"
description = "Vixen consuming from Richat gRPC and writing into redPanda"
publish = false
edition.workspace = true
license = "MIT"
repository = "https://github.com/rpcpool/yellowstone-vixen"

[dependencies]
clap = { workspace = true, features = ["derive", "cargo", "wrap_help"] }
toml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rustls = { workspace = true }
tokio = { workspace = true, features = ["sync", "rt"] }
yellowstone-vixen = { workspace = true }
yellowstone-vixen-core = { workspace = true }
yellowstone-vixen-spl-token-parser = { workspace = true }
yellowstone-vixen-yellowstone-grpc-source = { workspace = true }
yellowstone-vixen-kafka-sink = { workspace = true }
yellowstone-grpc-proto = { workspace = true }
serde_json = { workspace = true }
